examples/errors/9_parse_int/definitions.tmd
@extend
group Widget;

group Root {
    + Widget
}

element Window -> Root {
    width: u32,
    height: u32,
    allow_resize: bool,
    smooth: f64,
}

element Text -> Widget {
    value: String,
    font_size: i8,
}
